--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "greeetings"
   },
   "scripts": {
-    "test": "index.js"
+    "test": "index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
