--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "greeetings",
+  "name": "greetings-Express-js",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "index.js",
-    "start": "node index.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NonkululekoNooi/greeetings.git"
+    "url": "git+https://github.com/NonkululekoNooi/greetings-Express-js.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/NonkululekoNooi/greeetings/issues"
+    "url": "https://github.com/NonkululekoNooi/greetings-Express-js/issues"
   },
-  "homepage": "https://github.com/NonkululekoNooi/greeetings#readme",
+  "homepage": "https://github.com/NonkululekoNooi/greetings-Express-js#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "mocha": "^10.0.0",
-    "save": "^2.5.0"
-  },
-  "description": ""
+    "mocha": "^10.0.0"
+  }
 }
