--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
         image: postgres:latest
         
         env:
-          POSTGRES_DB: mygreeings_test
+          POSTGRES_DB: mygreetings_test
           POSTGRES_PASSWORD: pg123
           POSTGRES_PORT: 5432
           POSTGRES_USER: postgres
@@ -50,7 +50,7 @@ jobs:
     - run: npm install -g npm
     - run: npm install
     - run: |
-        PGPASSWORD=pg123 postgres-h localhost -U postgres -d mygreetings_test -a -f << path to sql file './db/database.sql'>>
+        PGPASSWORD=pg123 postgres -h localhost -U postgres -d mygreetings_test -a -f ./db/database.sql
     - run: npm run build --if-present
     - run: npm test
     env: 
