--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,8 +50,8 @@ jobs:
     - run: npm install -g npm
     - run: npm install
     - run: |
-        PGPASSWORD=pg123 psql -h localhost -U postgres -d mygreeting_test -a -f ./database.sql
+        PGPASSWORD=pg123 psql -h localhost -U postgres -d mygreetings_test -a -f ./database.sql
     - run: npm run build --if-present
     - run: npm test
     env: 
-      DATABASE_URL: postgresql://postgres:pg123@localhost:5432/mygreeting_test
+      DATABASE_URL: postgresql://postgres:pg123@localhost:5432/mygreetings_test
